--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="aaa">
-      <img src="./eisenhower-matrix.jpg">
+      <img src="./eisenhower-matrix.jpg" alt="The eisenhower matrix">
       <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">
         Want more details?
       </a>
@@ -30,7 +30,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove item">
           </button>
         </li>
         <li class="editMode">
@@ -39,7 +39,7 @@
           <input type="text" value="Go Shopping" class="task">
           <button class="edit">Save</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove item">
           </button>
         </li>
       </ul>
@@ -51,7 +51,7 @@
           <input type="text" class="task">
           <button class="edit">Edit</button>
           <button class="delete">
-            <img src="./remove.svg">
+            <img src="./remove.svg" alt="Remove item">
           </button>
         </li>
       </ul>
