--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
       </a>
     </aside>
     <section class="centered-main-page-element">
-      <p id="topSectionForAddingElementToList">
+      <div id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
         <button>Add</button>
       </div>
-      </p>
+      </div>
       <h3>Todo</h3>
       <ul id="incompleteTasks">
         <li>
